--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>code-gen-common</module>
         <module>code-gen-framework</module>
+        <module>code-gen-system</module>
     </modules>
 
     <properties>
@@ -30,6 +31,7 @@
         <hutool.version>5.8.5</hutool.version>
         <druid.version>1.2.11</druid.version>
         <dynamic-datasource.version>3.5.1</dynamic-datasource.version>
+        <jwt.version>4.0.0</jwt.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +60,13 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
                 <version>${dynamic-datasource.version}</version>
+            </dependency>
+
+            <!-- jwt -->
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>${jwt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
