--- a/code-gen-common/pom.xml
+++ b/code-gen-common/pom.xml
@@ -12,11 +12,6 @@
     <artifactId>code-gen-common</artifactId>
     <packaging>jar</packaging>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
     <dependencies>
         <!-- 工具类 -->
         <dependency>
@@ -26,6 +21,10 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-extra</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
