--- a/code-gen-web/pom.xml
+++ b/code-gen-web/pom.xml
@@ -9,28 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>code-gen-framework</artifactId>
+    <artifactId>code-gen-web</artifactId>
 
     <dependencies>
-        <!-- system模块 -->
+        <!-- framework模块 -->
         <dependency>
             <groupId>com.wuhunyu</groupId>
-            <artifactId>code-gen-system</artifactId>
+            <artifactId>code-gen-framework</artifactId>
             <version>${project.version}</version>
         </dependency>
 
-        <!-- web -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- test -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
 </project>
