--- a/code-gen-system/pom.xml
+++ b/code-gen-system/pom.xml
@@ -33,6 +33,10 @@
         <!-- 动态数据源 -->
         <dependency>
             <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
         </dependency>
 
